data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_761.wast
;; 2. **Backward Branch Stack Unwinding Test**: Formulate a test where a `loop` has multiple instructions that manipulate the operand stack, and place a `br` instruction targeting the `loop`. Verify that the operand stack is correctly unwound to the height of the loop upon taking the backward branch. This ensures the implementation accurately handles stack unwinding for backward branches.

(assert_invalid
  (module
    (func $backward-branch-stack-unwinding
      (local i32 i32)
      (loop $loop1 (block (drop))
        (local.get 0)
        (local.get 1)
        (i32.add)
        (br $loop1)
      )
    )
  )
  "type mismatch"
)